// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClassificationListItem ClassificationListItem初期値(Cateogry): item, routePath 1`] = `
"<div>
  <article class=\\"classification-list-item\\">
    <base-link-stub routeto=\\"[object Object]\\">
      <div class=\\"classification-list-item__box\\">
        <base-heading-stub hlv=\\"2\\">ダミーカテゴリー</base-heading-stub>
        <base-img-lazy-stub imgurl=\\"https://placehold.jp/150x150.png\\" imgalt=\\"ダミーカテゴリーのロゴ\\" size=\\"lg\\"></base-img-lazy-stub>
      </div>
    </base-link-stub>
  </article>
</div>"
`;

exports[`ClassificationListItem ClassificationListItem初期値(Tag): item, routePath 1`] = `
"<div>
  <article class=\\"classification-list-item\\">
    <base-link-stub routeto=\\"[object Object]\\">
      <div class=\\"classification-list-item__box\\">
        <base-heading-stub hlv=\\"2\\">ダミータグ</base-heading-stub>
        <base-img-lazy-stub imgurl=\\"https://placehold.jp/150x150.png\\" imgalt=\\"ダミータグのロゴ\\" size=\\"lg\\"></base-img-lazy-stub>
      </div>
    </base-link-stub>
  </article>
</div>"
`;
